Fix alignment issue for Player One

--- a/src/web/stylesheets/comparison.scss
+++ b/src/web/stylesheets/comparison.scss
@@ -44,3 +44,7 @@
   width: 180px;
   height: 180px;
 }
+
+.text__end-align {
+  text-align: end;
+}
